Completed lesson was pretty easy for the most part, had issues with the '1 notification element' it was too big. I had to add notification selector and align-self property

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,28 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  padding:8px;
+  display:flex;
+  justify-content:space-between;
+}
+
+.notifications{
+  display:flex;
+  max-height: 30px;
+  align-self: center;
+}
+
+.left{
+  display:flex;
+  margin-left:8px;
+  margin-right:8px;
+}
+
+.right{
+  display:flex;
+  flex-direction:row;
+  align-content:center;
+  flex-basis:auto;
 }
 
 .profile-image {
@@ -20,6 +42,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin-left:10px;
 }
 
 .logo {
@@ -41,8 +64,10 @@ a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  margin-left:8px;
 }
 
 ul {
   list-style-type: none;
+  display:flex;
 }
